--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -24,6 +24,13 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Enrollments" asp-action="Index">Enrollments</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Students</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Instructors" asp-action="Index">Instructors</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="Departments" asp-action="Index">Departments</a></li>
+                        <li class="nav-item"><a class="nav-link text-dark" asp-area="" asp-controller="OfficeAssignments" asp-action="Index">Office Assignment</a></li>
                     </ul>
                 </div>
             </div>
